--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,5 +25,6 @@ subjects:
 - !lcsh 'Congregational churches -- Missions -- Periodicals'
 - !lcsh 'Home missions -- Periodicals'
 - !lcc 'BV'
+- GITenberg
 title: The American Missionary — Volume 48, No. 07, July, 1894
 url: http://www.gutenberg.org/ebooks/26195
